# The-Powder-Game

./: .gitignore  CMakeLists.txt  README.md  ThePowderGame.sln  ThePowderGame.vcxproj  ThePowderGame.vcxproj.filters  ThePowderSim.sln  ThePowderSim.vcxproj  ThePowderSim.vcxproj.filters
include/: Element.h  SimMatrix.h  application.h  event_manager.h  manager_base.h  window.h  window_manager.h
include/glad/: glad.h
res/shaders/: basic.shader  (+1 more)
src/: CMakeLists.txt  ElementType.h  SimMatrix.cpp  application.cpp  brush.cpp  brush.h  event_manager.cpp  event_manager.h  glad.c  globals.h  input_manager.cpp  input_manager.h  main.cpp  manager_base.cpp  particle_creator.cpp  particle_creator.h  particles.h  shader.cpp  shader.h  shader_source.h  sim_matrix.cpp  sim_matrix.h  simulation.cpp  simulation.h  utils.cpp  utils.h  window.cpp  window.h  window_manager.cpp
src/particles/: CMakeLists.txt  element_type.h  gas_particle.cpp  gas_particle.h  immovable_solid_particle.cpp  immovable_solid_particle.h  material.h  movable_solid_particle.cpp  movable_solid_particle.h  particle.cpp  particle.h  solid_particle.h
src/particles/gas/: air.cpp  air.h  gas_particle.cpp  gas_particle.h
src/particles/liquid/: liquid_particle.cpp  liquid_particle.h  water.cpp  water.h
src/particles/solid/: solid_particle.cpp  solid_particle.h
src/particles/solid/immovable/: border_rock.cpp  border_rock.h  immovable_solid_particle.cpp  immovable_solid_particle.h  stone.cpp  stone.h
src/particles/solid/movable/: movable_solid_particle.cpp  movable_solid_particle.h  sand.cpp  sand.h
(+26 files in other folders)
